--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
     repositories {
 //        maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +20,7 @@ allprojects {
         jcenter()
 //        maven { url 'https://maven.google.com' }
         mavenCentral()
+        google()
     }
 }
 
