--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+
 apply plugin: 'kotlin-android'
+
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.kid.daydream"
         minSdkVersion 21
@@ -24,13 +25,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:leanback-v17:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.squareup.picasso:picasso:2.5.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "org.jetbrains.anko:anko-sdk21:0.10.0"
-    compile 'jcifs:jcifs:1.3.17'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:leanback-v17:25.3.1'
+    implementation 'com.android.support:support-v4:25.3.1'
+    implementation 'com.squareup.picasso:picasso:2.5.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-sdk21:0.10.0"
+    implementation 'jcifs:jcifs:1.3.17'
 }
 repositories {
     mavenCentral()
